# CipherV2

./: README.md  Repository Updates.py  pyproject.toml  regex_examples.txt  requirements.txt
CipherV2.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  main.py
src/assets/: create_icon.py
src/auth/: __init__.py  license.py  login.py
src/ui/: editor.py  modern_ui.py  theme.py
src/ui/components/: __init__.py  header_bar.py  loading_screen.py  status_bar.py
src/utils/: color_picker.py  command_palette.py  constants.py  diff_viewer.py  dll_injector.py  execution.py  formatter.py  http_client.py  json_tools.py  memory_editor.py  notifications.py  process_inspector.py  recent_files.py  settings.py  tools.py  update_checker.py
