[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CipherV2"
version = "2.0.0"
description = "The Ultimate JSON Injector & Code Manipulation Tool"
readme = "README.md"
authors = [
    {name = "aauuzyy"}
]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["src"]